20210222 添加新的设置界面功能

--- a/DM100/en.lproj/appString.strings
+++ b/DM100/en.lproj/appString.strings
@@ -29,10 +29,11 @@
 "searchhit"="Input at least 2 Letters";
 "networkerror"="Network error!";
 "page4item1"="Language Settings";
-"page4item2"="Change Password";
+"page4item2"="Change User Password";
 "page4item3"="Service Information";
 "page4item4"="About";
 "page4item5"="Logout";
+"page4item7"="Change Device Password";
 "expire"="Expire";
 "quiescent"="Quiescent";
 "driving"="Driving";
@@ -89,6 +90,8 @@
 "setitem5"="Vibration Alarm Level";
 "setitem6"="Voice Monitoring";
 "setitem7"="CMD List History";
+"setitem8"="Custom Instruction";
+"setitem9"="Alarm Settings";
 "sevicename"="Service Name:";
 "seviceaddress"="Service Address:";
 "ztinfo"="DomiLink Technology Co., Ltd.";
@@ -194,3 +197,90 @@
 "Energy"="Energy:";
 "page2tipT"="Three Parameters";
 "page2tipC"="GSM Sigal/GPS Satellite/Beidou Satellite";
+"gaodemap"="Auto Navi Map";
+"navtitle"="Navigation Aids";
+"errorA109X"="Failed to plan route";
+"errorA110X"="The location data returned by the device is empty, unable to navigate";
+"errorMapT1"="Unable to call Baidu Map";
+"errorMapC1"="Baidu Map is not installed on your mobile phone!";
+"errorMapT2"="Unable to call Auto Navi Map";
+"errorMapC2"="Auto Navi Map is not installed on your mobile phone!";
+"errorA111X"="The input is empty,the fence radius cannot be set";
+"errorA112X"="The minimum radius of fence is 200,please reset";
+"errorA113X"="Failed to set fence radius";
+"okS1014"="Fence radius set successfully";
+"fancedailogM1"="Please enter the radius range of electronic fence to be set, the minimum is 200 (m)";
+"online1"="Query Software Version";
+"online2"="Query parameters";
+"online3"="Query State";
+"online4"="Query Location";
+"online5"="Oil Power Control";
+"online6"="Reboot Device";
+"send"="Send";
+"cmdtip"="Input Custom Instructions";
+"error"="Error";
+"cmderror0"="Device Offline";
+"cmderror1"="The Device Is Not Responding, Please Resend";
+"cmderror2"="The Device Is Not Logged In";
+"cmderror3"="Command Can Not Recognized";
+"cmderror4"="Failed To Issue Command, Please Login Again";
+"cmderror5"="The Device Is Not Responding, Please Resend";
+"cmderror6"="The Device Is Not Responding";
+"cmderror7"="Command Not Recognized";
+"cmderror8"="The Device Does Not Support Offline Command Operation";
+"tips"="Tips";
+"offline1"="Location Type";
+"offline2"="Regular Reporting";
+"offline3"="Periodic Reporting";
+"offline4"="Real Time Reporting";
+"loctype1"="LBS Mode";
+"loctype2"="GPS Mode Is Preferred, And LBS Mode Is Used When Conditions Are Not Met";
+"loctype3"="WI-FI Loction Mode Is Preferred, And LBS Mode Is Used When Conditions Are Not Met";
+"loctype4"="Wi-Fi Loction Mode Is Preferred, GPS Mode Is Used When Conditions Are Not Met, And LBS Mode Is Selected If Conditions Are Still Not Met";
+"passworderror"="Password Verification Failed";
+"zhouqitip1"="*The Range Is 5 Minutes To 6 Hours";
+"oiloff"="Close The Oil Circuit";
+"oilon"="Open The Oil Circuit";
+"check"="Check";
+"checkpw"="Check The Device Password";
+"dingshit1"="Upload Interval Setting";
+"dingshiph"="Input Upload Unterval (10 ~ 999s)";
+"dingshierror1"="Input Upload Interval Must be 10 to 999s";
+"al01"="Device";
+"al02"="Recommended Alarm";
+"al03"="Other Alarms";
+"al11"="Device Name:";
+"al12"="IMEI:";
+"al13"="Device Type:";
+"al201"="Weak Signal Alarm:";
+"al202"="Parking Guard Alarm:";
+"al203"="Collision Alarm:";
+"al204"="Rollover Alarm:";
+"al205"="Signal Recovery Alarm:";
+"al206"="Photosensitive Alarm:";
+"al207"="SOS Alarm:";
+"al208"="Power Off Alarm:";
+"al209"="Traffic Expiration Alarm:";
+"al210"="Platform Expiration Alarm:";
+"al211"="Out Of The Fence Alarm:";
+"al31"="Vibration Alarm Level:";
+"al32"="Automatic Deployment:";
+"al33"="Speed Alarm:";
+"al34"="Offline Alarm:";
+"al35"="Low Power Alarm:";
+"al36"="Vibration Alarm:";
+"al41"="High Sensitivity";
+"al42"="Medium Sensitivity";
+"al43"="Low Sensitivity";
+"al44"="Close";
+"al51"="Recommended Alarm";
+"al52"="All Alarms";
+"aldailogA1"="Set The Maximum Speed (Not Less Than 0km/h)";
+"aldailogA2"="Input Maximum Speed";
+"aldailogA3"="Not Less Than 0km/h";
+"aldailogB1"="Set Offline Duration (3h-72h)";
+"aldailogC1"="Set Minimum Charge (10-100)";
+"setok"="Setup Successfully";
+"setfail"="Setup Failed";
+"aldailogD1"="Is Sure To Turn On Recommended Alarm？";
+"aldailogE1"="Is Sure To Turn On All Alarms？";
