--- a/DM100/zh-Hans.lproj/appString.strings
+++ b/DM100/zh-Hans.lproj/appString.strings
@@ -29,10 +29,11 @@
 "searchhit"="请输入至少2位关键字";
 "networkerror"="联网出错!";
 "page4item1"="语言设置";
-"page4item2"="修改密码";
+"page4item2"="修改用户密码";
 "page4item3"="服务商信息";
 "page4item4"="关于";
 "page4item5"="注销";
+"page4item7"="修改设备密码";
 "expire"="过期";
 "quiescent"="静止";
 "driving"="行驶中";
@@ -89,7 +90,8 @@
 "setitem5"="震动报警等级";
 "setitem6"="语音监听";
 "setitem7"="指令历史记录";
-
+"setitem8"="自定义指令";
+"setitem9"="报警设置";
 "sevicename"="服务商名称:";
 "seviceaddress"="服务商地址:";
 "ztinfo"="多米科技有限公司";
@@ -100,7 +102,7 @@
 "power"="电量:";
 "model"="模式:";
 "volt"="电压:";
-"sigtime"="心跳时间:";
+"sigtime"="联网时间:";
 "loctime"="定位时间:";
 "loctype"="定位类型:";
 "cmdtv1"="指令类型:";
@@ -194,3 +196,92 @@
 "Energy"="电量电压:";
 "page2tipT"="三个数值";
 "page2tipC"="GSM信号强度/GPS卫星/北斗卫星";
+"gaodemap"="高德地图";
+"navtitle"="导航辅助";
+"errorA109X"="规划路线失败";
+"errorA110X"="该设备返回的定位数据为空,无法进行导航";
+"errorMapT1"="无法调用百度地图";
+"errorMapC1"="你的手机未安装百度地图!";
+"errorMapT2"="无法调用高德地图";
+"errorMapC2"="你的手机未安装高德地图!";
+"errorA111X"="输入为空，无法设置围栏半径";
+"errorA112X"="围栏半径最小为200，请重新设置";
+"errorA113X"="设置围栏半径失败";
+"okS1014"="设置围栏半径成功";
+"fancedailogM1"="请输入要设置的电子围栏半径范围，最小为200（米）";
+"online1"="软件版本查询";
+"online2"="参数查询";
+"online3"="状态查询";
+"online4"="位置查询";
+"online5"="油电控制";
+"online6"="重启设备";
+"send"="发送";
+"cmdtip"="输入自定义指令";
+"error"="出错";
+"cmderror0"="设备已离线";
+"cmderror1"="设备无响应,请重新发送";
+"cmderror2"="当前设备未登录";
+"cmderror3"="指令无法识别";
+"cmderror4"="下发指令失败，请重新登录";
+"cmderror5"="设备无响应,请重新发送";
+"cmderror6"="设备无响应,请坚持指令是否正确";
+"cmderror7"="指令无法识别";
+"cmderror8"="该设备不支持离线指令操作";
+"tips"="提示信息";
+"offline1"="位置类型";
+"offline2"="定时上报";
+"offline3"="周期上报";
+"offline4"="实时上报";
+"loctype1"="基站定位";
+"loctype2"="优先使用GPS定位，不满足条件时使用基站定位";
+"loctype3"="优先使用WI-FI定位，不满足条件时使用基站定位";
+"loctype4"="优先使用WI-FI定位，不满足条件时使用GPS定位，仍不满足则选基站定位";
+"passworderror"="密码校验失败";
+"zhouqitip1"="*周期范围为5分钟至6小时";
+"oiloff"="断开油路";
+"oilon"="恢复油路";
+"check"="验证";
+"checkpw"="验证设备密码";
+"dingshit1"="上传时间间隔设置";
+"dingshiph"="输入上传间隔时间(10~999s)";
+"dingshierror1"="上传间隔时间范围为10～999秒";
+"device"="设备";
+"uploadtime"="上报周期";
+"al01"="设备";
+"al02"="推荐开启的报警";
+"al03"="其他报警";
+"al11"="设备名称:";
+"al12"="IMEI:";
+"al13"="设备类型:";
+"al201"="弱信号报警:";
+"al202"="停车守卫报警:";
+"al203"="碰撞报警:";
+"al204"="侧翻报警:";
+"al205"="信号恢复报警:";
+"al206"="感光报警:";
+"al207"="SOS报警:";
+"al208"="断电报警:";
+"al209"="流量到期报警:";
+"al210"="平台到期:";
+"al211"="出围栏报警:";
+"al31"="震动报警等级:";
+"al32"="自动布防:";
+"al33"="超速报警:";
+"al34"="离线报警:";
+"al35"="低电报警:";
+"al36"="震动报警:";
+"al41"="高灵敏度";
+"al42"="中灵敏度";
+"al43"="低灵敏度";
+"al44"="关闭";
+"al51"="开启推荐报警";
+"al52"="开启全部报警";
+"aldailogA1"="设置最高时速(不小于0km/h)";
+"aldailogA2"="输入最高时速";
+"aldailogA3"="不小于0km/h";
+"aldailogB1"="设置离线时长(3h-72h)";
+"aldailogC1"="设置最低电量(10-100)";
+"setok"="设置成功";
+"setfail"="设置失败";
+"aldailogD1"="确定开启推荐报警？";
+"aldailogE1"="确定开启全部报警？";
