20210224-更新历史轨迹line显示方式，更新图标显示方向

--- a/DM100/en.lproj/appString.strings
+++ b/DM100/en.lproj/appString.strings
@@ -284,3 +284,5 @@
 "setfail"="Setup Failed";
 "aldailogD1"="Is Sure To Turn On Recommended Alarm？";
 "aldailogE1"="Is Sure To Turn On All Alarms？";
+"normol"="Normol";
+"satellite"="Satellite";
