--- a/DM100/zh-Hans.lproj/appString.strings
+++ b/DM100/zh-Hans.lproj/appString.strings
@@ -85,10 +85,10 @@
 "okS1013"="修改账号密码成功,请重新登录!";
 
 "setitem2"="设置围栏范围";
-"setitem3"="在线指令";
-"setitem4"="离线指令";
+"setitem3"="工程指令";
+"setitem4"="用户指令";
 "setitem5"="震动报警等级";
-"setitem6"="语音监听";
+"setitem6"="防盗录音";
 "setitem7"="指令历史记录";
 "setitem8"="自定义指令";
 "setitem9"="报警设置";
@@ -215,8 +215,15 @@
 "online2"="参数查询";
 "online3"="状态查询";
 "online4"="位置查询";
-"online5"="油电控制";
+"online5"="防盗锁车";
 "online6"="重启设备";
+"online7"="远程解锁";
+"online8"="查询蓝牙名称";
+"online9"="修改蓝牙名称";
+"online10"="蓝牙连接失败次数上报";
+"blenote1"="请输入14个字符以内的名称";
+"blenote2"="请输入失败次数(1~255)";
+"blenote3"="说明:蓝牙连接失败到达所设定次数后启动自主上报";
 "send"="发送";
 "cmdtip"="输入自定义指令";
 "error"="出错";
@@ -231,9 +238,10 @@
 "cmderror8"="该设备不支持离线指令操作";
 "tips"="提示信息";
 "offline1"="位置类型";
-"offline2"="定时上报";
-"offline3"="周期上报";
-"offline4"="实时上报";
+"offline2"="运动上报模式";
+"offline3"="周期上报模式[5-360分钟]";
+"offline4"="实时在线模式";
+"offline5"="闹铃上报模式";
 "loctype1"="基站定位";
 "loctype2"="优先使用GPS定位，不满足条件时使用基站定位";
 "loctype3"="优先使用WI-FI定位，不满足条件时使用基站定位";
@@ -309,3 +317,6 @@
 "accuracyType5"="浮点定位";
 "accuracyType6"="推算定位";
 "push1"="围栏报警";
+"server1"="国际";
+"server2"="香港";
+"servertitle"="线路切换";
