20211027 调整设置界面显示模式

--- a/DM100/en.lproj/appString.strings
+++ b/DM100/en.lproj/appString.strings
@@ -13,12 +13,12 @@
 "menu3"="Car";
 "menu4"="My";
 "hello_world"="Hello world!";
-"loginnullerror"="The login account or password is empty, please enter…";
-"tcperror1"="Server connection failed";
-"tcperror2"="Login account or password wrong!";
-"tcperror3"="No data return";
-"logining"="Logging in…";
-"loginok"="Login successfully";
+"loginnullerror"="The Login Account Or Password Is Empty, Please Enter…";
+"tcperror1"="Server Connection Failed";
+"tcperror2"="Login Account Or Password Wrong!";
+"tcperror3"="No Data Return";
+"logining"="Logging In…";
+"loginok"="Login Successfully";
 "all"="All";
 "online"="Online";
 "offline"="Offline";
@@ -26,8 +26,8 @@
 "setting"="Set up";
 "playback"="Track";
 "search"="Search";
-"searchhit"="Input at least 2 Letters";
-"networkerror"="Network error!";
+"searchhit"="Input At Least 2 Letters";
+"networkerror"="Network Error!";
 "page4item1"="Language Settings";
 "page4item2"="Change User Password";
 "page4item3"="Service Information";
@@ -161,23 +161,23 @@
 "open"="ON";
 "pg2mt5"="Me";
 "page4item6"="Map Switch";
-"ggmap"="Google map";
-"bdmap"="Baidu map";
-"applemap"="Apple map";
+"ggmap"="Google Map";
+"bdmap"="Baidu Map";
+"applemap"="Apple Map";
 "hisitem1"="Coordinate:";
-"hisitem2"="Location time:";
-"hisitem3"="Location type:";
+"hisitem2"="Location Time:";
+"hisitem3"="Location Type:";
 "popt1"="State:";
 "popt2"="Date:";
 "popt4"="Alarm Type:";
 "popt5"="Address:";
-"popc2"="Current speed:";
-"popc1"="Overspeed alarm(speed:";
+"popc2"="Current Speed:";
+"popc1"="Overspeed Alarm(Speed:";
 "locstart"="Start positioning yourself, please wait";
-"locfinish"="Finish positioning";
-"nodevice"="No equipment";
+"locfinish"="Finish Positioning";
+"nodevice"="No Equipment";
 "back"="Back";
-"nodata"="No more data";
+"nodata"="No More Data";
 "hislist1"="ID";
 "hislist2"="Time";
 "hislist3"="Type";
@@ -213,7 +213,7 @@
 "okS1014"="Fence radius set successfully";
 "fancedailogM1"="Please enter the radius range of electronic fence to be set, the minimum is 200 (m)";
 "online1"="Query Software Version";
-"online2"="Query parameters";
+"online2"="Query Parameters";
 "online3"="Query State";
 "online4"="Query Location";
 "online5"="Remote Locking";
@@ -240,9 +240,10 @@
 "tips"="Tips";
 "offline1"="Location Type";
 "offline2"="Sports Reporting Model";
-"offline3"="Periodic Reporting Model[5-360min]";
-"offline4"="Real Time Online Model";
+"offline3"="Periodic Reporting";
+"offline4"="Real Time Online";
 "offline5"="Alarm Clock Reporting Model";
+"offline6"="Oil Power Control";
 "loctype1"="LBS Mode";
 "loctype2"="GPS Mode Is Preferred, And LBS Mode Is Used When Conditions Are Not Met";
 "loctype3"="WI-FI Loction Mode Is Preferred, And LBS Mode Is Used When Conditions Are Not Met";
@@ -319,3 +320,24 @@
 "server1"="Internation";
 "server2"="HK";
 "servertitle"="Server Setting";
+"location"="Location";
+"basic"="Basic Functions";
+"setitem10"="Electronic Fence";
+"add"="Add";
+"addfence"="Add Electronic Fence";
+"modifyfence"="Modify Electronic Fence";
+"radius"="Radius Is";
+"name"="Name";
+"fenceerror1"="Please Enter Fence Name";
+"fenceaddfail"="Failed To Added Electronic Fence";
+"fenceaddok"="SuccessFully Added Electronic Fence";
+"fencecell1"="Longitude";
+"fencecell2"="Latitude";
+"fencecell3"="Radius";
+"delete"="Delete";
+"modify"="Modify";
+"deletefencefail"="Failed To Deleted Electronic Fence";
+"deletefenceok"="SuccessFully Deleted Electronic Fence";
+"modifyfencefail"="Failed To Modified Electronic Fence";
+"modifyfenceok"="SuccessFully Modified Electronic Fence";
+"modifyfence"="Modify Electronic Fence";
