--- a/DM100/zh-Hans.lproj/appString.strings
+++ b/DM100/zh-Hans.lproj/appString.strings
@@ -239,9 +239,10 @@
 "tips"="提示信息";
 "offline1"="位置类型";
 "offline2"="运动上报模式";
-"offline3"="周期上报模式[5-360分钟]";
+"offline3"="周期上报";
 "offline4"="实时在线模式";
 "offline5"="闹铃上报模式";
+"offline6"="油电控制";
 "loctype1"="基站定位";
 "loctype2"="优先使用GPS定位，不满足条件时使用基站定位";
 "loctype3"="优先使用WI-FI定位，不满足条件时使用基站定位";
@@ -320,3 +321,24 @@
 "server1"="国际";
 "server2"="香港";
 "servertitle"="线路切换";
+"location"="定位";
+"basic"="基础功能";
+"setitem10"="电子围栏";
+"add"="添加";
+"addfence"="添加电子围栏";
+"modifyfence"="修改电子围栏";
+"radius"="半径";
+"name"="名称";
+"fenceerror1"="请输入围栏名称";
+"fenceaddfail"="添加电子围栏失败";
+"fenceaddok"="添加电子围栏成功";
+"fencecell1"="经度";
+"fencecell2"="纬度";
+"fencecell3"="半径";
+"delete"="删除";
+"modify"="修改";
+"deletefencefail"="删除电子围栏失败";
+"deletefenceaok"="删除电子围栏成功";
+"modifyfencefail"="修改电子围栏失败";
+"modifyfenceok"="修改电子围栏成功";
+"modifyfence"="修改电子围栏";
